# GGAI

./: LICENSE  feedback.ipynb  pyproject.toml  utils.py
